@@ -13,57 +13,46 @@ This is docker image based on [Debian with Tini](https://github.com/aem-design/d
 One image that can be used for both Author and Publish nodes
 No license is included, you will need to register when starting up
 
-### AEM Version
+### Included Packages
 
-Following base version of AEM jar used for this image, additional packages installed in separate branches.
+Following is the list of packages included
 
-Version: 6.5.0 GA
-
-### AEM Version Images Conventions
-
-To speedup development and service provisioning AEM images have a convention to drive image development.
-
-Following is a conventon for naming image version so that they are clear and provide good starting point for your usecase.
-
-* 6.x.x - **Base** image that only has AEM GA, this should be used for Ansible backed pipeline or other orchestration tools for budling up services to specific package version level
-* 6.x.x.x - **Base+SP** image with only specific service pack added
-* 6.x.x(.x)-bundle - **Bundle** uses **Base**/**Base+SP** with bundle packages see section below
-* 6.x.x(.x)-forms - **Forms** uses **Bundle** with Forms package see section below
-
+* aem                   - for all aem instance types
 
 ### Environment Variables
 
 Following environment variables are available
 
-| Name              | Default Value                 | Notes |
-| ---               | ---                           | ---   |
-| AEM_VERSION       | "6.5.0"   | only used during build  |
-| AEM_JVM_OPTS      | "-server -Xms1024m -Xmx1024m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0"   |  |
-| AEM_START_OPTS    | "start -c /aem/crx-quickstart -i launchpad -p 8080 -a 0.0.0.0 -Dsling.properties=conf/sling.properties" |  |
-| AEM_JARFILE       | "/aem/crx-quickstart/app/cq-quickstart-${AEM_VERSION}-standalone-quickstart.jar" |  |
-| AEM_RUNMODE       | "-Dsling.run.modes=author,crx3,crx3tar,nosamplecontent" |  |
+| Name           | Default Value                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | Notes                  |
+|----------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------|
+| AEM_VERSION    | "6.5.0"                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | only used during build |
+| AEM_JVM_OPTS   | "-server -Xms1024m -Xmx1024m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0"                                                                                                                                                                                                                                                                                                                              |                        |
+| AEM_JVM_OPTS   | "${AEM_JVM_OPTS} -XX:+UseParallelGC --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED -Dnashorn.args=--no-deprecation-warning" |                        |
+| AEM_START_OPTS | "start -c /aem/crx-quickstart -i launchpad -p 8080 -a 0.0.0.0 -Dsling.properties=conf/sling.properties"                                                                                                                                                                                                                                                                                                                                                                             |                        |
+| AEM_JARFILE    | "/aem/crx-quickstart/app/cq-quickstart-${AEM_VERSION}-standalone-quickstart.jar"                                                                                                                                                                                                                                                                                                                                                                                                    |                        |
+| AEM_RUNMODE    | "-Dsling.run.modes=author,crx3,crx3tar,nosamplecontent"                                                                                                                                                                                                                                                                                                                                                                                                                             |                        |
 
 
 ### Volumes
 
 Following volumes are exposed
 
-| Path | Notes  |
-| ---  | ---    |
-| "/aem/crx-quickstart/repository" | |
-| "/aem/crx-quickstart/logs" | setup your logs to out put to console |
-| "/aem/backup" | |
+| Path                             | Notes                                 |
+|----------------------------------|---------------------------------------|
+| "/aem/crx-quickstart/repository" |                                       |
+| "/aem/crx-quickstart/logs"       | setup your logs to out put to console |
+| "/aem/backup"                    |                                       |
 
 ### Ports
 
 Following Ports are exposed
 
-| Path | Notes  |
-| ---  | ---    |
-| 8080 | main http port |
-| 58242 | debug |
-| 57345 | debug |
-| 57346 | debug |
+| Path  | Notes          |
+|-------|----------------|
+| 8080  | main http port |
+| 58242 | debug          |
+| 57345 | debug          |
+| 57346 | debug          |
 
 ### Packages Container
 
